Bug 1609895 - Prevent elements overflowing outside the window dialo when dealing with long address pills or input fields in the compose messenger. r=mkmelin

--- a/mail/themes/shared/mail/messengercompose.css
+++ b/mail/themes/shared/mail/messengercompose.css
@@ -524,6 +524,7 @@
 
 .address-input {
   color: inherit;
+  padding-block: 4px;
 }
 
 .address-pill {
